--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ rayon          = { version = "1", optional = true }
 csv            = { version = "1" }
 niffler        = { version = "2", features = ["bzip2", "lzma", "gz", "bgz"] }
 serde          = { version = "1", features = ["derive"] }
+noodles        = { version = "0.77", features = ["fasta"] }
 
 # CLI management
 clap           = { version = "4", features = ["derive"] }
