--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ stderrlog      = { version = "0.5" }
 [dev-dependencies]
 criterion      = { version = "0.5" }
 rand           = { version = "0.8" }
+biotest        = { version = "0.2", features = ["sequence"] }
 
 [[bench]]
 name = "interval_build"
