--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,17 +1,16 @@
-_commit: 1.7.1
+# Changes here will be overwritten by Copier
+_commit: 1.8.0
 _src_path: gh:natir/copier-rust
 author_email: pierre@marijon.fr
 author_name: Pierre Marijon
-ci: github
-cli: true
+bin: true
 copyright_date: '2024'
 copyright_holder: Pierre Marijon
 copyright_holder_email: pierre@marijon.fr
 copyright_license: MIT
-forge_host: github.com
 forge_namespace: natir
 forge_repo_name: variant-myth
+lib: false
 msrv: '1.75'
-proc_macro: false
 project_description: A variant annotater.
 project_name: variant_myth
