--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,9 +37,9 @@ rayon          = { version = "1", optional = true }
 # Input Output management
 csv            = { version = "1" }
 niffler        = { version = "2", features = ["bzip2", "lzma", "gz", "bgz"] }
-serde          = { version = "1", features = ["derive"] }
 noodles        = { version = "0.78", features = ["fasta"] }
-serde_json     = { version = "1" }
+arrow          = { version = "53" }
+parquet        = { version = "53" }
 
 # CLI management
 clap           = { version = "4", features = ["derive"] }
