--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,8 +38,8 @@ rayon          = { version = "1", optional = true }
 csv            = { version = "1" }
 niffler        = { version = "2", features = ["bzip2", "lzma", "gz", "bgz"] }
 noodles        = { version = "0.78", features = ["fasta"] }
-arrow          = { version = "53" }
-parquet        = { version = "53" }
+arrow          = { version = "54" }
+parquet        = { version = "54" }
 
 # CLI management
 clap           = { version = "4", features = ["derive"] }
@@ -51,6 +51,7 @@ anyhow         = { version = "1" }
 # Logging and error management
 log            = { version = "0.4" }
 stderrlog      = { version = "0.5" }
+serde_json = "1.0.135"
 
 
 [dev-dependencies]
