--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,7 @@ anyhow         = { version = "1" }
 log            = { version = "0.4" }
 stderrlog      = { version = "0.5" }
 serde_json = "1.0.135"
+serde = { version = "1.0.217", features = ["derive"] }
 
 
 [dev-dependencies]
