--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,7 +52,7 @@ anyhow         = { version = "1" }
 # Logging and error management
 log            = { version = "0.4" }
 stderrlog      = { version = "0.5" }
-serde_json = "1.0.135"
+serde_json = { version = "1.0.135", features = ["preserve_order"] }
 serde = { version = "1.0.217", features = ["derive"] }
 
 
