--- a/.github/workflows/msrv.yaml
+++ b/.github/workflows/msrv.yaml
@@ -24,4 +24,6 @@ jobs:
         with:
           toolchain: $rust_version
       - name: Run tests
-        run: cargo test --all-features
+        run: cargo test
+      - name: Run tests parallel
+        run: cargo test --features parallel
