--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -37,4 +37,6 @@ jobs:
         with:
           toolchain: ${{ matrix.toolchain }}
       - name: Run tests
-        run: cargo test --all-features
+        run: cargo test
+      - name: Run tests parallel
+        run: cargo test --features parallel
