--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -12,6 +12,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         toolchain: [stable, beta, nightly]
+        features: ["default", "parallel", "out_json", "out_json,parallel"]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout code
@@ -21,13 +22,14 @@ jobs:
         with:
           toolchain: ${{ matrix.toolchain }}
       - name: Run check
-        run: cargo check --all-targets
+        run: cargo check --all-targets --features ${{ matrix.features }}
 
   tests:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         toolchain: [stable, beta, nightly]
+        features: ["default", "parallel", "out_json", "out_json,parallel"]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout code
@@ -37,6 +39,4 @@ jobs:
         with:
           toolchain: ${{ matrix.toolchain }}
       - name: Run tests
-        run: cargo test
-      - name: Run tests parallel
-        run: cargo test --features parallel
+        run: cargo test --features ${{ matrix.features }}
