--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -12,7 +12,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         toolchain: [stable, beta, nightly]
-        features: ["default", "parallel", "out_json", "out_json,parallel"]
+        features: ["default", "parallel", "json", "json,parallel"]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout code
@@ -29,7 +29,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         toolchain: [stable, beta, nightly]
-        features: ["default", "parallel", "out_json", "out_json,parallel"]
+        features: ["default", "parallel", "json", "json,parallel"]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout code
