--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = [
 	"Pierre Marijon <pierre@marijon.fr>"
 ]
 
-description  = "A variant annotater."
+description  = "A KISS variant annotater."
 edition      = "2021"
 rust-version = "1.74"
 
@@ -37,8 +37,8 @@ rayon          = { version = "1", optional = true }
 
 # Input Output management
 csv            = { version = "1" }
-niffler        = { version = "2", features = ["bzip2", "lzma", "gz", "bgz"] }
-noodles        = { version = "0.87", features = ["fasta"] }
+niffler        = { version = "3" }
+noodles        = { version = "0.91", features = ["fasta"] }
 arrow          = { version = "54", optional = true }
 parquet        = { version = "54", optional = true }
 serde_json     = { version = "1", features = ["preserve_order"], optional = true }
@@ -53,7 +53,7 @@ anyhow         = { version = "1" }
 
 # Logging and error management
 log            = { version = "0.4" }
-stderrlog      = { version = "0.5" }
+stderrlog      = { version = "0.6" }
 
 [dev-dependencies]
 ## Benchmark management
